# PFIAir

./: .gitignore  README.md  db.sqlite3  manage.py  model.py  requirments.txt  startServer.sh  startWorker.sh  startWorker2.sh  tfidf.pkl
PFI_Morph/: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_morphs.py  binvox2vdb.pxd  binvox2vdb.pyx  binvox_to_vdb.py  compile.sh  compile_cython.sh  compile_voxel_convert.sh  convert.py  convert_binvox.py  dependencies.txt  ground_truth.py  libopenvdb.4.0.2.dylib  libtbb.dylib  morph_models.py  morph_tests.py  overnight_run.sh  pfimorph.cfg  pfimorph.pxd  pfimorph.pyx  post_process.py  requirements.txt  reset_output.sh  run_all.sh  setup.py  zip_script.sh
PFI_Morph/MorphingUsingLevelSets/: BoundingBox.cpp  BoundingBox.h  ClosestToCentroid.h  CommonOperations.cpp  CommonOperations.h  Container.cpp  Container.hpp  EnergyCalculator.cpp  EnergyCalculator.h  GridOperations.h  HTMLHelper.h  LevelSet.cpp  LevelSet.h  Mesh.cpp  Mesh.h  MeshOperations.h  Morph.cpp  Morph.h  MorphOperations.h  MorphStats.cpp  MorphStats.h  MostCentralVertex.h  PCACalculator.cpp  ReportGenerator.cpp  ReportGenerator.h  Tests.h  Timer.cpp  Timer.h  UpdtMeshOperations.h  main.cpp  morph_extension.cpp  morph_extension.h
PFI_Morph/MorphingUsingLevelSets.xcodeproj/: project.pbxproj
PFI_Morph/Reports/: beast.html  bird.html  bishop.html  claw.html  container.html  cup.html  cylinder.html  duck.html  flask.html  hammer.html  hand.html  head.html  man-gun.html  modular-hand.html  mushroom-1.html  nail-1.html  pebble.html  queen.html  script.js  stand.html  (+6 more)
(+1010 files in other folders)
